// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar Component SideBar renders 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="sidebar-container"
        style="height: 600px;"
      >
        <ul
          class="mainmenu"
        >
          <div
            class="title"
          >
            LABEL
          </div>
          <li
            class="item "
          >
            <a
              class=""
              href="/link"
              target="_blank"
            >
              full url
              <div
                class="label"
              >
                EXTERNAL
              </div>
              <i
                class="external-link icon"
                icon="fal,external-link"
              />
            </a>
          </li>
          <li
            class="item disabled"
          >
            <a
              class="disabled"
              href="/link"
            >
              full url
              <div
                class="label"
              >
                DISABLED
              </div>
            </a>
          </li>
          <li
            class="item "
          >
            <a
              class=""
              href="/link"
            >
              full url
              <div
                class="label"
              >
                NORMAL
              </div>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="sidebar-container"
      style="height: 600px;"
    >
      <ul
        class="mainmenu"
      >
        <div
          class="title"
        >
          LABEL
        </div>
        <li
          class="item "
        >
          <a
            class=""
            href="/link"
            target="_blank"
          >
            full url
            <div
              class="label"
            >
              EXTERNAL
            </div>
            <i
              class="external-link icon"
              icon="fal,external-link"
            />
          </a>
        </li>
        <li
          class="item disabled"
        >
          <a
            class="disabled"
            href="/link"
          >
            full url
            <div
              class="label"
            >
              DISABLED
            </div>
          </a>
        </li>
        <li
          class="item "
        >
          <a
            class=""
            href="/link"
          >
            full url
            <div
              class="label"
            >
              NORMAL
            </div>
          </a>
        </li>
      </ul>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SideBar Component SideBar renders without sections 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="sidebar-container"
        style="height: 600px;"
      >
        <ul
          class="mainmenu"
        />
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="sidebar-container"
      style="height: 600px;"
    >
      <ul
        class="mainmenu"
      />
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
